@@ -140,8 +140,29 @@ public class Java14
 	{
 		public void mouseWheelMoved(MouseWheelEvent e)
 		{
+			JEditTextArea textArea = (JEditTextArea)e.getSource();
+
 			int amt = e.getWheelRotation();
-			System.err.println(amt);
+
+			if(e.isShiftDown())
+				scrollPage(textArea,amt);
+			else if(e.isControlDown())
+				scrollLine(textArea,amt);
+			else
+				scrollLine(textArea,amt * 3);
+		}
+
+		private void scrollLine(JEditTextArea textArea, int amt)
+		{
+			int newpos = textArea.getFirstLine() + amt;
+			newpos = Math.max(newpos, 0);
+			newpos = Math.min(newpos, textArea.getVirtualLineCount());
+			textArea.setFirstLine(newpos);
+		}
+
+		private void scrollPage(JEditTextArea textArea, int amt)
+		{
+			scrollLine(textArea,amt * textArea.getVisibleLines());
 		}
 	}
 }
